--- a/PaymentGateway.Merchant.Admin/Dockerfile
+++ b/PaymentGateway.Merchant.Admin/Dockerfile
@@ -5,7 +5,7 @@ EXPOSE 80
 FROM mcr.microsoft.com/dotnet/core/sdk:2.1-stretch AS build
 WORKDIR /src
 COPY ["PaymentGateway.Merchant.Admin/PaymentGateway.Merchant.Admin.csproj", "PaymentGateway.Merchant.Admin/"]
-COPY ["PaymentGateway.Data/PaymentGateway.Data.csproj", "PaymentGateway.Data/"]
+COPY ["PaymentGateway.Data./PaymentGateway.Data..csproj", "PaymentGateway.Data./"]
 RUN dotnet restore "PaymentGateway.Merchant.Admin/PaymentGateway.Merchant.Admin.csproj"
 COPY . .
 WORKDIR "/src/PaymentGateway.Merchant.Admin"
