Make Serilog Async

--- a/PaymentGateway.Api/appsettings.json
+++ b/PaymentGateway.Api/appsettings.json
@@ -14,9 +14,9 @@
     "AllowedHosts": "*",
     "Serilog": {
       "MinimumLevel": "Information",
-      "WriteTo": [
+      "WriteTo:Async": [
         {
-          "Name": "RollingFile",
+          "Name": "Async",
           "Args": {
             "pathFormat": "C:\\Temp\\PaymentGateway\\log-{Date}.txt",
             "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] {Message}{NewLine}{Exception}"
