--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
   web: 
     build: 
       context: "."
-      dockerfile: PaymentGateway.Merchant.Admin/Dockerfile
+      dockerfile: PaymentGateway.MerchantAdmin/Dockerfile
     depends_on: 
       - db
     ports: 
