Infrastructure + REST API implementation

--- a/PaymentGateway.Api/Dockerfile
+++ b/PaymentGateway.Api/Dockerfile
@@ -5,9 +5,11 @@ EXPOSE 80
 FROM mcr.microsoft.com/dotnet/core/sdk:2.2-stretch AS build
 WORKDIR /src
 COPY ["PaymentGateway.Api/PaymentGateway.Api.csproj", "PaymentGateway.Api/"]
+COPY ["Service.Interfaces/PaymentGateway.Service.Interfaces.csproj", "Service.Interfaces/"]
+COPY ["PaymentGateway.Domain.Interfaces/PaymentGateway.Repository.Interfaces.csproj", "PaymentGateway.Domain.Interfaces/"]
+COPY ["PaymentGateway.Data/PaymentGateway.Domain.Entities.csproj", "PaymentGateway.Data/"]
+COPY ["PaymentGateway.Repository/PaymentGateway.Infrastructure.Repository.csproj", "PaymentGateway.Repository/"]
 COPY ["PaymentGateway.Service/PaymentGateway.Service.csproj", "PaymentGateway.Service/"]
-COPY ["PaymentGateway.Repository/PaymentGateway.Repository.csproj", "PaymentGateway.Repository/"]
-COPY ["PaymentGateway.Data/PaymentGateway.Data.csproj", "PaymentGateway.Data/"]
 RUN dotnet restore "PaymentGateway.Api/PaymentGateway.Api.csproj"
 COPY . .
 WORKDIR "/src/PaymentGateway.Api"
