--- a/PaymentGateway.Service/PaymentGateway.Service.csproj
+++ b/PaymentGateway.Service/PaymentGateway.Service.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -9,7 +9,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PaymentGateway.Repository\PaymentGateway.Repository.csproj" />
+    <ProjectReference Include="..\PaymentGateway.Domain.Interfaces\PaymentGateway.Repository.Interfaces.csproj" />
+    <ProjectReference Include="..\Service.Interfaces\PaymentGateway.Service.Interfaces.csproj" />
   </ItemGroup>
 
 </Project>
